--- a/Transcriptome/miARma1.7_GCA.ini
+++ b/Transcriptome/miARma1.7_GCA.ini
@@ -1,1 +1,44 @@
-#Configuration file for miARma
+;General parameters
+[General]
+; type of analysis (miRNA, mRNA or circRNA)
+type=mRNA
+;0 for no verbose, otherwise to print "almost" everything
+verbose=0
+; Folder for miRNA reads
+read_dir= .
+; Number of process to run at the same time
+threads=20
+; label for the analsysis
+label=GCA
+; Folder where miARma has been instaled
+miARmaPath=~/miARma/
+; Folder to store results
+output_dir=~/miARma_results/
+; organism used
+organism=human
+;Type of sequencing ; could be Paired or Single. [Single by default]
+seqtype=Paired
+#Whether the data is from a strand-specific assay (yes, no or reverse, yes by default) 
+for featureCounts analysis
+strand=no
+
+
+[Quality]
+;Character string to put in the name of the results directory
+prefix=Pre
+[Aligner]
+; ; Aligner (Bowtie1, Bowtie2, BWA, miRDeep or Bowtie1-Bowtie2, topHat, Hisat2, star)
+aligner=STAR
+starindex=~/star_index
+
+[ReadCount]
+#GFF file used to calculate the number of reads in featureCounts analysis
+database=~/gencode.v34.annotation.gtf
+;GFF attribute to be used as feature ID (default: gene_id) for featureCounts analysis
+seqid=gene_name
+; Quality value to avoid counting low quality reads
+quality=10
+;Feature type (3rd column in GFF file) to be used, all features of other type are 
+ignored (default:exon) for featureCounts analysis
+featuretype=exon
+parameters=-B -M -O -C
